--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,5 @@
   "semi": true,
   "trailingComma": "all",
   "useTabs": false,
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
