--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "watch:server": "swc server -d dist --watch",
+    "dev:server": "nodemon dist/server/index.js",
     "build": "tsc -b && vite build",
+    "build:client": "vite build",
+    "build:server": "swc server -d dist",
     "lint": "eslint .",
     "format": "prettier --write .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -21,6 +25,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@swc/cli": "^0.7.8",
+    "@swc/core": "^1.12.11",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.12",
     "@types/react": "^19.1.8",
@@ -31,6 +37,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.8.3",
