構成を変更

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev:server": "nodemon dist/server/index.js",
     "build": "tsc -b && vite build",
     "build:client": "vite build --outDir dist/client",
-    "build:server": "npx swc src server -d dist",
-    "build:test": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "build:server": "swc src server -d dist",
     "lint": "eslint .",
     "format": "prettier --write .",
     "preview": "vite preview"
